// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgDetail derivative state does not have unexpected UI changes 1`] = `
<div>
  <div
    class="flex flex-col w-full justify-start flex-wrap "
  >
    <div
      class="flex flex-row ml-3.5 "
    >
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20  mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          DeFi Assets
        </div>
        <div
          class="flex flex-row align-middle "
        >
          <p
            class="font-semibold text-base mr-3"
          >
            5XBTCUSDT
          </p>
          <p
            class="flex flex-row text-sm text-icongray mb-1 flex flex-row  pt-1"
          >
            ~ 
            $14,000.00
          </p>
        </div>
      </div>
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20  mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          Layer 1 Coins
        </div>
        <div
          class="flex flex-row align-middle "
        >
          <p
            class="font-semibold text-base mr-3"
          >
            5XBTCUSDT
          </p>
          <p
            class="flex flex-row text-sm text-icongray mb-1 flex flex-row  pt-1"
          >
            ~ 
            $10,000.00
          </p>
        </div>
      </div>
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20  mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          Stablecoins
        </div>
        <div
          class="flex flex-row align-middle "
        >
          <p
            class="font-semibold text-base mr-3"
          >
            5XBTCUSDT
          </p>
          <p
            class="flex flex-row text-sm text-icongray mb-1 flex flex-row  pt-1"
          >
            ~ 
            $16,000.00
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AgDetail nft state does not have unexpected UI changes 1`] = `
<div>
  <div
    class="flex flex-col w-full justify-start flex-wrap "
  >
    <div
      class="flex flex-row ml-3.5 border-b-2 border-gray mb-5 pb-4"
    >
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20 border border-black mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          Metaverse Tokens
        </div>
        <div
          class="flex flex-row align-middle "
        >
          <p
            class="font-semibold text-base mr-3"
          >
             
            3
             NFTs
          </p>
          <p
            class="flex flex-row text-sm text-icongray mb-1"
          >
             
            ~ 
            10.00
             ETH
             
          </p>
        </div>
      </div>
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20  mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          Gaming Tokens
        </div>
        <div
          class="flex flex-row align-middle "
        >
          <p
            class="font-semibold text-base mr-3"
          >
             
            2
             NFTs
          </p>
          <p
            class="flex flex-row text-sm text-icongray mb-1"
          >
             
            ~ 
            1.00
             ETH
             
          </p>
        </div>
      </div>
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20  mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          Ethereum Ecosystem
        </div>
        <div
          class="flex flex-row align-middle "
        >
          <p
            class="font-semibold text-base mr-3"
          >
             
            1
             NFTs
          </p>
          <p
            class="flex flex-row text-sm text-icongray mb-1"
          >
             
            ~ 
            2.31
             ETH
             
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrDetail does not have unexpected UI changes 1`] = `
<div>
  <div
    class="flex flex-row flex-wrap w-full"
  >
    <div
      class="flex flex-row  justify-start md:w-2/5 sm:w-2/5 lg:w-2/5 lp:w-2/5 border-r-2 border-gray "
    >
      <div
        class="flex flex-row flex-wrap h-full w-full "
      >
        <div
          class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20 ml-3.5 sm:w-2/5 md:w-2/5 lg:w-2/5 lp:w-2/5 xl:w-2/5 justify-center"
          role="Detail Rebalancing Cards"
        >
          <p
            class="flex flex-row text-sm text-icongray mb-1"
          >
             
            Average Entry Price
             
          </p>
          <p
            class="font-semibold text-base mr-3"
          >
             
            $62,420.49
             
          </p>
        </div>
        <div
          class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20 ml-3.5 sm:w-2/5 md:w-2/5 lg:w-2/5 lp:w-2/5 xl:w-2/5 justify-center"
          role="Detail Rebalancing Cards"
        >
          <p
            class="flex flex-row text-sm text-icongray mb-1"
          >
             
            Market Price
             
          </p>
          <p
            class="font-semibold text-base mr-3"
          >
             
            $21,334.88
             
          </p>
        </div>
        <div
          class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20 ml-3.5 sm:w-2/5 md:w-2/5 lg:w-2/5 lp:w-2/5 xl:w-2/5 justify-center"
          role="Detail Rebalancing Cards"
        >
          <p
            class="flex flex-row text-sm text-icongray mb-1"
          >
             
            Average Exit Price
             
          </p>
          <p
            class="font-semibold text-base mr-3"
          >
             
            $16,642.13
             
          </p>
        </div>
        <div
          class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20 ml-3.5 sm:w-2/5 md:w-2/5 lg:w-2/5 lp:w-2/5 xl:w-2/5 justify-center"
          role="Detail Rebalancing Cards"
        >
          <p
            class="flex flex-row text-sm text-icongray mb-1"
          >
             
            Total Cost
             
          </p>
          <p
            class="font-semibold text-base mr-3"
          >
             
            $49,811.13
             
          </p>
        </div>
      </div>
    </div>
    <div
      class=" pr-3 pt-5 pl-10 md:w-3/5 sm:w-3/5 lg:w-3/5 lp:w-3/5 h-full"
    >
      <div
        class="w-full h-11 flex justify-center items-center mr-5 flex-wrap"
      >
        <canvas
          height="150"
          role="img"
          width="300"
        />
        <div
          class="flex flex-col justify-start w-full"
        >
          <div
            class="flex flex-row"
          >
            <div
              class="flex flex-col text-center mt-2 w-3/5"
            >
              <div
                class="flex items-center space-x-2"
              >
                <span
                  class="w-4 h-4 rounded-sm mb-3"
                  style="background-color: rgb(0, 26, 66);"
                />
                <span
                  class="text-xs text-icongray mb-3 text-start"
                >
                  Current: 63.31% ~ $12,233.00
                </span>
              </div>
              <div
                class="flex items-center space-x-2"
              >
                <span
                  class="w-4 h-4 rounded-sm mb-3"
                  style="background-color: rgb(203, 235, 255);"
                />
                <span
                  class="text-xs text-icongray mb-3 text-start"
                >
                  Desired: 36.69% ~ 
                </span>
              </div>
              <div
                class="flex items-center space-x-2"
              >
                <span
                  class="w-4 h-4 rounded-sm mb-3"
                  style="background-color: rgb(217, 217, 217);"
                />
                <span
                  class="text-xs text-icongray mb-3 text-start"
                >
                  Portfolio Balance: 100%  ~  
                </span>
              </div>
            </div>
            <div
              class="flex flex-row justify-end w-1/2 "
            >
              <div
                class="flex items-center w-12 h-6 bg-gray rounded-full transition-all duration-500 pl-1"
              >
                <span
                  class="flex h-5 w-5 p-2 translate-x-0 bg-white rounded-full transition-all duration-500 justify-center items-center font-semibold text-xs"
                >
                  %
                </span>
                 
              </div>
              <div
                class="flex flex-col items-end w-2/5 ml-2.5"
              >
                <input
                  class="bg-gray w-full rounded-md pl-2 p1 h-6"
                  step="any"
                  type="text"
                  value="36.69"
                />
                <p
                  class="flex flex-row justify-end h-7 w-32 items-center text-icongray"
                >
                  ≈
                   
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HdDetail renders all relevant data for nft state does not have unexpected UI changes 1`] = `
<div>
  <div
    class="flex flex-col justify-start"
  >
    <div
      class="flex flex-row ml-3.5 border-b-2 border-gray mb-5 pb-4 flex-wrap"
    >
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20 border border-black mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          <div
            class="mr-1.5"
          >
             
          </div>
           
          OpenSea
        </div>
        <div
          class="flex flex-row align-middle"
        >
          <p
            class="font-semibold text-base mr-3"
          >
             
            6
             NFTs
             
          </p>
          <p
            class="flex flex-row text-sm text-icongray mb-1 pt-1"
          >
            ~ 
            120.00
             ETH
          </p>
           
        </div>
      </div>
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20  mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          <div
            class="mr-1.5"
          >
             
          </div>
           
          Binance
        </div>
        <div
          class="flex flex-row align-middle"
        >
          <p
            class="font-semibold text-base mr-3"
          >
             
            3
             NFTs
             
          </p>
          <p
            class="flex flex-row text-sm text-icongray mb-1 pt-1"
          >
            ~ 
            7.00
             ETH
          </p>
           
        </div>
      </div>
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20  mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          <div
            class="mr-1.5"
          >
             
          </div>
           
          Huobi
        </div>
        <div
          class="flex flex-row align-middle"
        >
          <p
            class="font-semibold text-base mr-3"
          >
             
            2
             NFTs
             
          </p>
          <p
            class="flex flex-row text-sm text-icongray mb-1 pt-1"
          >
            ~ 
            5.00
             ETH
          </p>
           
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HdDetail renders cryptocurrency state properly does not change unexpected 1`] = `
<div>
  <div
    class="flex flex-col justify-start"
  >
    <div
      class="flex flex-row ml-3.5 border-b-2 border-gray mb-5 pb-4 flex-wrap"
    >
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20  mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          <div
            class="mr-1.5"
          >
             
          </div>
           
          Binance
        </div>
        <div
          class="flex flex-row align-middle"
        >
           
          <div
            class="flex flex-row font-semibold text-base mr-3"
          >
             
            <p>
               
              97814.00
               
              BTC
               
            </p>
            <p
              class="flex flex-row text-sm text-icongray mb-1"
            >
              ~ 
              $75,655.23
            </p>
             
          </div>
           
           
        </div>
      </div>
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20  mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          <div
            class="mr-1.5"
          >
             
          </div>
           
          Huobi
        </div>
        <div
          class="flex flex-row align-middle"
        >
           
          <div
            class="flex flex-row font-semibold text-base mr-3"
          >
             
            <p>
               
              4028.68
               
              BTC
               
            </p>
            <p
              class="flex flex-row text-sm text-icongray mb-1"
            >
              ~ 
              $10,000.00
            </p>
             
          </div>
           
           
        </div>
      </div>
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20  mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          <div
            class="mr-1.5"
          >
             
          </div>
           
          Polygon
        </div>
        <div
          class="flex flex-row align-middle"
        >
           
          <div
            class="flex flex-row font-semibold text-base mr-3"
          >
             
            <p>
               
              6646.08
               
              BTC
               
            </p>
            <p
              class="flex flex-row text-sm text-icongray mb-1"
            >
              ~ 
              $80,443.96
            </p>
             
          </div>
           
           
        </div>
      </div>
      <div
        class="flex flex-col card mb-2.5 ml-3.5 p-3 pr-3 w-64 h-20  mr-3.5"
      >
        <div
          class="flex flex-row text-sm text-icongray mb-1"
        >
          <div
            class="mr-1.5"
          >
             
          </div>
           
          Bybit
        </div>
        <div
          class="flex flex-row align-middle"
        >
           
          <div
            class="flex flex-row font-semibold text-base mr-3"
          >
             
            <p>
               
              4048.68
               
              BTC
               
            </p>
            <p
              class="flex flex-row text-sm text-icongray mb-1"
            >
              ~ 
              $10,000.00
            </p>
             
          </div>
           
           
        </div>
      </div>
    </div>
    <div
      class="overflow-y-scroll h-36"
    />
  </div>
</div>
`;
